examples/test/testpolicy10728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10728
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key49: value29
      key6: value2
      key46: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value19
      podSelector:
        matchLabels:
          key38: value8
